results/securify2/time_manipulation_governmental_survey.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/static/static_analysis_patterns.py", line 73, in find_matches
    static = analysis_context.static_analysis
  File "/sec/securify/analyses/analysis.py", line 88, in static_analysis
    self._static = self.config.static_analysis(self)
  File "securify/__main__.py", line 255, in <lambda>
    static_analysis=lambda t: static_analysis.analyze_cfg(t.cfg, **souffle_config),
  File "/sec/securify/analyses/analysis.py", line 81, in cfg
    self._cfg = self.config.cfg_compiler(self)
  File "securify/__main__.py", line 254, in <lambda>
    cfg_compiler=lambda t: solidity_cfg_compiler.compile_cfg(t.ast).cfg,
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:17:3: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
  function Governmental() {
  ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:17:3: SyntaxError: No visibility specified. Did you intend to add "public"?
  function Governmental() {
  ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:19:28: SyntaxError: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
    if (msg.value<1 ether) throw;
                           ^---^

fixed_pragma.sol:22:3: SyntaxError: No visibility specified. Did you intend to add "public"?
  function invest() {
  ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:23:30: SyntaxError: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
    if (msg.value<jackpot/2) throw;
                             ^---^

fixed_pragma.sol:30:3: SyntaxError: No visibility specified. Did you intend to add "public"?
  function resetInvestment() {
  ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:32:7: SyntaxError: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
      throw;
      ^---^

fixed_pragma.sol:45:3: SyntaxError: No visibility specified. Did you intend to add "public"?
  function attack(address target, uint count) {
  ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:34:5: TypeError: "send" and "transfer" are only available for objects of type "address payable", not "address".
    lastInvestor.send(jackpot);
    ^---------------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:17:3: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.\n  function Governmental() {\n  ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.","severity":"error","sourceLocation":{"end":467,"file":"fixed_pragma.sol","start":380},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:17:3: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n  function Governmental() {\n  ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":467,"file":"fixed_pragma.sol","start":380},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:19:28: SyntaxError: \"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".\n    if (msg.value<1 ether) throw;\n                           ^---^\n","message":"\"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".","severity":"error","sourceLocation":{"end":462,"file":"fixed_pragma.sol","start":457},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:22:3: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n  function invest() {\n  ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":676,"file":"fixed_pragma.sol","start":471},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:23:30: SyntaxError: \"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".\n    if (msg.value<jackpot/2) throw;\n                             ^---^\n","message":"\"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".","severity":"error","sourceLocation":{"end":525,"file":"fixed_pragma.sol","start":520},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:30:3: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n  function resetInvestment() {\n  ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":937,"file":"fixed_pragma.sol","start":680},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:32:7: SyntaxError: \"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".\n      throw;\n      ^---^\n","message":"\"throw\" is deprecated in favour of \"revert()\", \"require()\" and \"assert()\".","severity":"error","sourceLocation":{"end":782,"file":"fixed_pragma.sol","start":777},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:45:3: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n  function attack(address target, uint count) {\n  ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":1170,"file":"fixed_pragma.sol","start":964},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:17:3: Warning: This declaration shadows an existing declaration.\n  function Governmental() {\n  ^ (Relevant source part starts here and spans across multiple lines).\nfixed_pragma.sol:10:1: The shadowed declaration is here:\ncontract Governmental {\n^ (Relevant source part starts here and spans across multiple lines).\n","message":"This declaration shadows an existing declaration.","secondarySourceLocations":[{"end":939,"file":"fixed_pragma.sol","message":"The shadowed declaration is here:","start":188}],"severity":"warning","sourceLocation":{"end":467,"file":"fixed_pragma.sol","start":380},"type":"Warning"},{"component":"general","formattedMessage":"fixed_pragma.sol:34:5: TypeError: \"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".\n    lastInvestor.send(jackpot);\n    ^---------------^\n","message":"\"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".","severity":"error","sourceLocation":{"end":806,"file":"fixed_pragma.sol","start":789},"type":"TypeError"}],"sources":{}}

        > stdout:
